--- a/py_demos/requirements.txt
+++ b/py_demos/requirements.txt
@@ -2,7 +2,11 @@ convertdate==2.3.2
 hijri-converter==2.1.1
 holidays==0.11.1
 korean-lunar-calendar==0.2.1
+mypy==0.812
+mypy-extensions==0.4.3
 PyMeeus==0.5.11
 python-dateutil==2.8.1
 pytz==2021.1
 six==1.15.0
+typed-ast==1.4.3
+typing-extensions==3.7.4.3
