--- a/rates_client/requirements.txt
+++ b/rates_client/requirements.txt
@@ -5,13 +5,17 @@ bleach==3.3.0
 certifi==2020.12.5
 chardet==4.0.0
 colorama==0.4.4
+convertdate==2.3.2
 coverage==5.5
 docutils==0.17
 flake8==3.9.0
+hijri-converter==2.1.1
+holidays==0.11.1
 idna==2.10
 importlib-metadata==3.10.0
 isort==5.8.0
 keyring==23.0.1
+korean-lunar-calendar==0.2.1
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
 mypy==0.812
@@ -22,7 +26,10 @@ pycodestyle==2.7.0
 pyflakes==2.3.1
 Pygments==2.8.1
 pylint==2.7.4
+PyMeeus==0.5.11
 pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
 pywin32-ctypes==0.2.0
 readme-renderer==29.0
 requests==2.25.1
