--- a/py_demos/requirements.txt
+++ b/py_demos/requirements.txt
@@ -8,6 +8,7 @@ korean-lunar-calendar==0.2.1
 mypy==0.812
 mypy-extensions==0.4.3
 PyMeeus==0.5.11
+pyodbc==4.0.30
 python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
