--- a/py_demos/requirements.txt
+++ b/py_demos/requirements.txt
@@ -11,6 +11,7 @@ PyMeeus==0.5.11
 pyodbc==4.0.30
 python-dateutil==2.8.1
 pytz==2021.1
+PyYAML==5.4.1
 requests==2.25.1
 six==1.15.0
 typed-ast==1.4.3
