--- a/py_demos/config/rates_config.yaml
+++ b/py_demos/config/rates_config.yaml
@@ -2,7 +2,7 @@ server:
   host: 127.0.0.1
   port: 5000
 database:
-  server: localhost\\SQLExpress
+  server: localhost\SQLExpress
   database: ratesapp
   username: sa
   password: sqldbpass
