--- a/rates_project_04122021/rates_server/requirements.txt
+++ b/rates_project_04122021/rates_server/requirements.txt
@@ -1,19 +1,28 @@
+artifacts-keyring==0.3.1
+autopep8==1.5.6
 certifi==2020.12.5
 chardet==4.0.0
 convertdate==2.3.2
 hijri-converter==2.1.1
 holidays==0.11.1
 idna==2.10
+importlib-metadata==3.10.1
+keyring==23.0.1
 korean-lunar-calendar==0.2.1
 mypy==0.812
 mypy-extensions==0.4.3
+pycodestyle==2.7.0
 PyMeeus==0.5.11
 pyodbc==4.0.30
 python-dateutil==2.8.1
 pytz==2021.1
+pywin32-ctypes==0.2.0
 PyYAML==5.4.1
+rates-shared==0.2.0
 requests==2.25.1
 six==1.15.0
+toml==0.10.2
 typed-ast==1.4.3
 typing-extensions==3.7.4.3
 urllib3==1.26.4
+zipp==3.4.1
